gitignore and commandssubsub changes

--- a/latex documents/BC MATH3311/HW/homework3.tex
+++ b/latex documents/BC MATH3311/HW/homework3.tex
@@ -13,7 +13,7 @@
 \usepackage{tikz}
 
 
-\input{commandssubsub}
+\input{../../commandssubsub}
 
 \newcommand{\cubelabels}[4]{
 \begin{tikzpicture}[scale=.5,font=\tiny]
