--- a/latex documents/BC MATH3311/HW/homework5.tex
+++ b/latex documents/BC MATH3311/HW/homework5.tex
@@ -16,7 +16,7 @@
 \newcolumntype{2}{D{.}{}{2.0}}
 
 
-\input{commandssubsub}
+\input{../../commandssubsub}
 
 \newcommand{\cubewithaxis}[1]{
 \begin{tikzpicture}[scale=.5,font=\tiny]
