--- a/latex documents/BC MATH3311/HW/homework6.tex
+++ b/latex documents/BC MATH3311/HW/homework6.tex
@@ -16,7 +16,7 @@
 \newcolumntype{2}{D{.}{}{2.0}}
 
 
-\input{commandssubsub}
+\input{../../commandssubsub}
 
 \newcommand{\FactoringTriangle}[6]{
 \begin{tikzpicture}[>=stealth, node distance=2.5cm]
